Use .formatted for string interpolation.